Added tile dictionary
Also added css

--- a/branch.css
+++ b/branch.css
@@ -14,6 +14,16 @@
 	margin-top: 50px;
 }
 
+#tiles--0 {
+	width: 50px;
+	height: 50px;
+}
+
+#wall--1 {
+	width: 50px;
+	height: 50px;
+}
+
 button:focus {
 	outline: none !important;
 }
