--- a/branch.css
+++ b/branch.css
@@ -14,15 +14,11 @@
 	margin-top: 50px;
 }
 
-#tiles--0 {
+#tile {
 	width: 50px;
 	height: 50px;
-}
-
-#wall--1 {
-	width: 50px;
-	height: 50px;
-}
+/*	background-color: black;
+*/}
 
 button:focus {
 	outline: none !important;
