--- a/branch.css
+++ b/branch.css
@@ -1,8 +1,9 @@
-.map {
+#map {
 	position: relative;
 	width: 500px;
 	height: 500px;
 	border: 5px solid lightblue;
+	z-index: 10;
 }
 
 #sprite {
@@ -12,13 +13,15 @@
 	display: block;
 	margin-left: 50px;
 	margin-top: 50px;
+	z-index: 100;
 }
 
 .tile {
 	width: 50px;
 	height: 50px;
-/*	background-color: black;
-*/}
+	position: absolute;
+	z-index: 50;
+}
 
 button:focus {
 	outline: none !important;
