--- a/branch.css
+++ b/branch.css
@@ -1,9 +1,9 @@
 #map {
-	position: relative;
-	width: 500px;
-	height: 500px;
-	border: 5px solid lightblue;
-	z-index: 10;
+	position: absolute;
+/*	width: 500px;
+	height: 500px;*/
+/*	border: 5px solid lightblue;
+*/	z-index: 10;
 }
 
 #sprite {
