--- a/branch.css
+++ b/branch.css
@@ -2,8 +2,8 @@
 	position: absolute;
 /*	width: 500px;
 	height: 500px;*/
-/*	border: 5px solid lightblue;
-*/	z-index: 10;
+/*	border: 5px solid lightblue; */
+	z-index: 10;
 }
 
 #sprite {
