--- a/branch.css
+++ b/branch.css
@@ -1,8 +1,5 @@
 #map {
 	position: absolute;
-/*	width: 500px;
-	height: 500px;*/
-/*	border: 5px solid lightblue; */
 	z-index: 10;
 }
 
@@ -16,7 +13,11 @@
 	z-index: 100;
 }
 
-#message {
+#infobar {
+	position: fixed;
+	width: 500px;
+	height: 50px;
+	background-color: lightgrey;
 	z-index: 150;
 }
 
